--- a/app/src/main/res/layout/activity_list_inovasi.xml
+++ b/app/src/main/res/layout/activity_list_inovasi.xml
@@ -74,7 +74,7 @@
         android:id="@+id/text_category_inovasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/semua_kategori"
+        android:text="@string/seluruh_bidang"
         android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/black_opacity"
         android:textSize="14sp"
@@ -108,11 +108,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/buttonsheet_categoryinovasi">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="vertical"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
                 android:id="@+id/illust_inovasi"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_120sdp"
@@ -123,122 +128,131 @@
                 android:src="@drawable/illust_inovasi"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.04" />
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.04" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.01" />
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.01" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.92" />
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.92" />
 
-            <ImageView
-                android:id="@+id/icon_list"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginTop="16dp"
-                android:src="@drawable/list_icon"
-                app:layout_constraintEnd_toStartOf="@id/search_button_inovasi"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@id/guideline2"
-                app:layout_constraintTop_toBottomOf="@id/illust_inovasi"
-                app:tint="@color/black_opacity" />
+                <ImageView
+                    android:id="@+id/icon_list"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginTop="16dp"
+                    android:src="@drawable/list_icon"
+                    app:layout_constraintEnd_toStartOf="@id/search_button_inovasi"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@id/guideline2"
+                    app:layout_constraintTop_toBottomOf="@id/illust_inovasi"
+                    app:tint="@color/black_opacity" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_marginTop="19dp"
-                android:fontFamily="@font/monstserrat_semibold"
-                android:text="@string/text_list_inovasi"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toStartOf="@id/search_button_inovasi"
-                app:layout_constraintHorizontal_bias="0.05"
-                app:layout_constraintStart_toEndOf="@id/icon_list"
-                app:layout_constraintTop_toBottomOf="@id/illust_inovasi" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="19dp"
+                    android:fontFamily="@font/monstserrat_semibold"
+                    android:text="@string/text_list_inovasi"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toStartOf="@id/search_button_inovasi"
+                    app:layout_constraintHorizontal_bias="0.05"
+                    app:layout_constraintStart_toEndOf="@id/icon_list"
+                    app:layout_constraintTop_toBottomOf="@id/illust_inovasi" />
 
-            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/search_button_inovasi"
-                android:layout_width="132dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/monstserrat_semibold"
-                android:text="@string/btn_text_inovasi_search"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                app:shapeAppearanceOverlay="@style/shapeButton"
-                android:backgroundTint="@color/green_smooth"
-                android:elevation="0dp"
-                android:textAllCaps="false"
-                android:textSize="11sp"
-                app:iconGravity="textStart"
-                app:iconTint="@color/white"
-                app:iconPadding="5dp"
-                app:iconSize="@dimen/_12sdp"
-                app:icon="@drawable/ic_baseline_youtube_searched_for_24"
-                app:layout_constraintEnd_toEndOf="@id/guideline4"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@id/guideline2"
-                app:layout_constraintTop_toBottomOf="@id/illust_inovasi" />
+                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                    android:id="@+id/search_button_inovasi"
+                    android:layout_width="132dp"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/monstserrat_semibold"
+                    android:text="@string/btn_text_inovasi_search"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    app:shapeAppearanceOverlay="@style/shapeButton"
+                    android:backgroundTint="@color/green_smooth"
+                    android:elevation="0dp"
+                    android:textAllCaps="false"
+                    android:textSize="11sp"
+                    app:iconGravity="textStart"
+                    app:iconTint="@color/white"
+                    app:iconPadding="5dp"
+                    app:iconSize="@dimen/_12sdp"
+                    app:icon="@drawable/ic_baseline_youtube_searched_for_24"
+                    app:layout_constraintEnd_toEndOf="@id/guideline4"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@id/guideline2"
+                    app:layout_constraintTop_toBottomOf="@id/illust_inovasi" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycleViewListInovasi"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
-                android:nestedScrollingEnabled="false"
-                app:layout_constraintStart_toStartOf="@id/guideline2"
-                app:layout_constraintEnd_toEndOf="@id/guideline4"
-                app:layout_constraintHeight_default="wrap"
-                app:layout_constraintTop_toBottomOf="@id/search_button_inovasi"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycleViewListInovasi"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:nestedScrollingEnabled="false"
+                    app:layout_constraintStart_toStartOf="@id/guideline2"
+                    app:layout_constraintEnd_toEndOf="@id/guideline4"
+                    app:layout_constraintHeight_default="wrap"
+                    app:layout_constraintTop_toBottomOf="@id/search_button_inovasi" />
 
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:id="@+id/shimmer_inovasi_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_23sdp"
-                android:layout_marginStart="@dimen/_18sdp"
-                app:layout_constraintStart_toStartOf="@id/guideline2"
-                app:shimmer_duration="800"
-                android:layout_marginTop="@dimen/_10sdp"
-                app:layout_constraintEnd_toEndOf="@id/guideline4"
-                app:layout_constraintTop_toBottomOf="@id/search_button_inovasi"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-                <LinearLayout
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmer_inovasi_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginEnd="@dimen/_23sdp"
+                    android:layout_marginStart="@dimen/_18sdp"
+                    app:layout_constraintStart_toStartOf="@id/guideline2"
+                    app:shimmer_duration="800"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    app:layout_constraintEnd_toEndOf="@id/guideline4"
+                    app:layout_constraintTop_toBottomOf="@id/search_button_inovasi"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                    <include layout="@layout/placeholder_inovasi_layout"/>
-                </LinearLayout>
-            </com.facebook.shimmer.ShimmerFrameLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout"/>
+                    </LinearLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <!--<ProgressBar
+                android:id="@+id/progress_inovasi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:progressTint="@color/green_smooth"/>-->
+
+        </LinearLayout>
+
+
     </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
