--- a/app/src/main/res/layout/content_inovasi_layout.xml
+++ b/app/src/main/res/layout/content_inovasi_layout.xml
@@ -34,16 +34,18 @@
                 android:layout_width="@dimen/_48sdp"
                 android:layout_height="@dimen/_48sdp"
                 app:cardCornerRadius="@dimen/_8sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.087"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/guideline3">
 
-                 <ImageView
+                <ImageView
                     android:id="@+id/iv_foto_inovasi"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:adjustViewBounds="false"
+                    android:adjustViewBounds="true"
+                    android:cropToPadding="true"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +59,8 @@
                 android:id="@+id/tv_nama_inovasi"
                 android:layout_width="@dimen/_150sdp"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:fontFamily="@font/monstserrat_semibold"
                 android:text="Teh Pala (Limbah Kulit Pala)"
@@ -72,7 +76,9 @@
                 android:layout_width="@dimen/_150sdp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_8sdp"
+                android:maxLines="1"
+                android:ellipsize="end"
+               android:layout_marginTop="@dimen/_6sdp"
                 android:fontFamily="@font/montserrat_regular"
                 android:text="Wirda Ningsih"
                 android:textColor="@color/gray_text"
@@ -90,6 +96,8 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="Kuliner"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="@color/gray_text"
                 android:textSize="@dimen/_8sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
