--- a/app/src/main/res/layout/content_inovator_layout.xml
+++ b/app/src/main/res/layout/content_inovator_layout.xml
@@ -51,6 +51,8 @@
                 android:id="@+id/tv_nama_inovator"
                 android:layout_width="@dimen/_150sdp"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:fontFamily="@font/monstserrat_semibold"
                 android:text="Wirda Ningsih"
@@ -68,6 +70,8 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:fontFamily="@font/montserrat_regular"
                 android:text="Dramaga"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_marginTop="@dimen/_6sdp"
                 android:textColor="@color/gray_text"
                 android:textSize="@dimen/_9sdp"
@@ -84,6 +88,8 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="Masyarakat Umum"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="@color/gray_text"
                 android:textSize="@dimen/_8sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
