--- a/app/src/main/res/layout/activity_inovasi_detail.xml
+++ b/app/src/main/res/layout/activity_inovasi_detail.xml
@@ -69,11 +69,9 @@
         android:id="@+id/contentDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-15dp"
         android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@id/iv_foto_inovasi_detail"
-        app:optRoundCardBackgroundColor="@color/white"
-        app:optRoundCardCornerRadius="@dimen/_15sdp">
+        app:optRoundCardBackgroundColor="@color/white">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -406,7 +404,7 @@
                                     android:layout_marginTop="@dimen/_3sdp"
                                     android:ellipsize="end"
                                     android:fontFamily="@font/montserrat_medium"
-                                    android:maxLines="2"
+                                    android:maxLines="1"
                                     android:text="Wirda Ningsih"
                                     android:textColor="@color/gray_text"
                                     android:textSize="@dimen/_10sdp"
