--- a/app/src/main/res/layout/activity_inovator_detail.xml
+++ b/app/src/main/res/layout/activity_inovator_detail.xml
@@ -384,10 +384,10 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardInovasi_in_Inovator"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_6sdp"
-                app:cardElevation="@dimen/_1sdp"
                 android:visibility="invisible"
+                app:cardElevation="@dimen/_1sdp"
                 app:layout_constraintTop_toBottomOf="@id/cardCategory">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -411,26 +411,30 @@
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12sdp"
                         app:layout_constraintStart_toStartOf="@id/guideline7"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycleViewInovasi_Inovator"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
-                        app:layout_constraintTop_toBottomOf="@id/in"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintHeight_default="wrap"
                         android:layout_marginTop="@dimen/_2sdp"
-                        app:layout_constraintWidth_default="wrap"/>
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                        app:layout_constraintHeight_default="wrap"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/in"
+                        app:layout_constraintWidth_default="wrap" />
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_10sdp"
+                        app:layout_constraintTop_toBottomOf="@id/recycleViewInovasi_Inovator" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
             <View
                 android:background="@color/background"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_60sdp"
+                android:layout_height="@dimen/_50sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
