--- a/app/src/main/res/layout/activity_list_inovasi.xml
+++ b/app/src/main/res/layout/activity_list_inovasi.xml
@@ -43,7 +43,7 @@
     <View
         android:id="@+id/bg_buttonsheet_categoryinovasi"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/_30sdp"
         app:layout_constraintTop_toBottomOf="@id/d"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/custom_buttonsheetinovasi"/>
@@ -77,17 +77,39 @@
         android:text="@string/seluruh_bidang"
         android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/black_opacity"
-        android:textSize="14sp"
+        android:textSize="@dimen/_12sdp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toEndOf="@id/icon_category"
         app:layout_constraintTop_toTopOf="@id/bg_buttonsheet_categoryinovasi"
         app:layout_constraintBottom_toBottomOf="@id/bg_buttonsheet_categoryinovasi"/>
 
+    <com.skydoves.powerspinner.PowerSpinnerView
+        android:id="@+id/spinner_year"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_30sdp"
+        android:gravity="center_vertical"
+        android:textSize="@dimen/_12sdp"
+        android:fontFamily="@font/montserrat_regular"
+        android:textColor="@color/black_opacity"
+        android:textColorHint="@color/black_opacity"
+        android:hint="List Tahun"
+        app:spinner_popup_animation="dropdown"
+        android:paddingLeft="@dimen/_38sdp"
+        android:paddingEnd="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_3sdp"
+        app:spinner_popup_background="@color/background"
+        app:spinner_divider_show="true"
+        app:spinner_divider_color="@color/black"
+        app:spinner_arrow_tint="@color/green_smooth"
+        app:spinner_arrow_drawable="@drawable/ic_baseline_navigate_next_24"
+        android:background="@color/tr_green"
+        app:spinner_item_height="@dimen/_30sdp"
+        app:layout_constraintTop_toBottomOf="@id/bg_buttonsheet_categoryinovasi"/>
 
     <Button
         android:id="@+id/buttonsheet_categoryinovasi"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/_30sdp"
         android:layout_marginStart="16dp"
         android:alpha="0"
         android:visibility="visible"
@@ -106,12 +128,7 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/buttonsheet_categoryinovasi">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+        app:layout_constraintTop_toBottomOf="@id/spinner_year">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -198,6 +215,52 @@
                     app:layout_constraintStart_toStartOf="@id/guideline2"
                     app:layout_constraintTop_toBottomOf="@id/illust_inovasi" />
 
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/temp_bg_invalid"
+                    android:layout_width="@dimen/_180sdp"
+                    android:layout_height="@dimen/_180sdp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@id/search_button_inovasi"
+                    app:layout_constraintVertical_bias="0.312"
+                    app:lottie_autoPlay="true"
+                    app:lottie_fileName="84885-404-sleep-cat.json"
+                    app:lottie_loop="true" />
+
+                <TextView
+                    android:id="@+id/invalid_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:text="@string/invalid"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12sdp"
+                    android:fontFamily="@font/monstserrat_semibold"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@id/temp_bg_invalid"
+                    android:layout_marginTop="-53dp"
+                    app:layout_constraintStart_toStartOf="@id/temp_bg_invalid"
+                    app:layout_constraintEnd_toEndOf="@id/temp_bg_invalid"/>
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="@dimen/_250sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:fontFamily="@font/monstserrat_semibold"
+                    android:text="@string/det_empty_search"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/_7sdp"
+                    app:layout_constraintEnd_toEndOf="@id/invalid_text"
+                    app:layout_constraintHorizontal_bias="0.387"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@id/invalid_text"
+                    app:layout_constraintTop_toBottomOf="@id/invalid_text"
+                    app:layout_constraintVertical_bias="0.064" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycleViewListInovasi"
                     android:layout_width="match_parent"
@@ -227,20 +290,127 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        tools:layout_editor_absoluteX="-158dp"
+                        tools:layout_editor_absoluteY="537dp">
 
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
-                        <include layout="@layout/placeholder_inovasi_layout"/>
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
+
+                        <include layout="@layout/placeholder_inovasi_layout" />
                     </LinearLayout>
+
                 </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/buttonPrevPage"
+                    android:layout_width="@dimen/_85sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    app:cardBackgroundColor="@color/background"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:visibility="gone"
+                    app:cardElevation="0dp"
+                    android:elevation="0dp"
+                    app:layout_constraintTop_toBottomOf="@id/recycleViewListInovasi"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="@dimen/_20sdp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/iconPrev"
+                            android:layout_width="@dimen/_26sdp"
+                            android:layout_height="@dimen/_26sdp"
+                            app:tint="@color/green_smooth"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:src="@drawable/ic_baseline_navigate_before_24"/>
+
+                        <TextView
+                            android:id="@+id/textPrev"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Prev Page"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:textSize="@dimen/_11sdp"
+                            android:textColor="@color/green_smooth"
+                            app:layout_constraintStart_toEndOf="@id/iconPrev"
+                            app:layout_constraintTop_toTopOf="@id/iconPrev"
+                            app:layout_constraintBottom_toBottomOf="@id/iconPrev"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/buttonNextPage"
+                    android:layout_width="@dimen/_85sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    app:cardBackgroundColor="@color/background"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:visibility="gone"
+                    app:cardElevation="0dp"
+                    android:elevation="0dp"
+                    app:layout_constraintTop_toBottomOf="@id/recycleViewListInovasi"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="@dimen/_20sdp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:id="@+id/iconNext"
+                            android:layout_width="@dimen/_26sdp"
+                            android:layout_height="@dimen/_26sdp"
+                            app:tint="@color/green_smooth"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:src="@drawable/ic_baseline_navigate_next_24"/>
+
+                        <TextView
+                            android:id="@+id/textNext"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Next Page"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:textSize="@dimen/_11sdp"
+                            android:textColor="@color/green_smooth"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/iconNext"
+                            app:layout_constraintBottom_toBottomOf="@id/iconNext"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
+
+                <View
+                    android:id="@+id/padBottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_130sdp"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@id/buttonNextPage"/>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -249,10 +419,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:progressTint="@color/green_smooth"/>-->
-
-        </LinearLayout>
-
-
     </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
