--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,8 +26,14 @@
     <color name="shadow">#EBEBEB</color>
     <color name="gray">#F1EEE9</color>
     <color name="black_opacity">#A1000000</color>
+    <color name="black_bg">#99000000</color>
     <color name="white_ripple">#42FFFFFF</color>
     <color name="black_ripple">#42000000</color>
+    <color name="white_rd">#D9FFFFFF</color>
+    <color name="gray_btn">#404040</color>
+
+    <color name="bg_photo">#1e1e1e</color>
+    <color name="bg_photo_tool">#3e3e42</color>
 
     <color name="placeholder_bg">#dddddd</color>
     <color name="item_name">#0c0c0c</color>
